增加完整获取 symbol 的队列