@@ -3,13 +3,8 @@ plugins {
     // 允许指定 mainClassName 入口
     id 'application'
 }
-mainClassName = 'com.huanhe_tech.siever.Main'
 
-repositories {
-    flatDir {
-        dirs 'libs'
-    }
-}
+mainClassName = 'com.huanhe_tech.siever.Main'
 
 dependencies {
     // 需要指定项目以来，否则 gradle 找不到其他模块
@@ -17,11 +12,15 @@ dependencies {
     implementation fileTree(dir: 'libs', includes: ['*.jar'])
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
-    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.34.0'
+//    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.34.0'
+}
+
+tasks.withType(Test) {
+    useJUnitPlatform()
+    jvmArgs '--enable-preview'
 }
 
 allprojects {
-
     group 'com.huanhe-tech'
     version '1.0'
 
@@ -40,19 +39,17 @@ allprojects {
             }
         }
     }
-
 }
 
 subprojects {
     // 通过系统创建 gradle 模块，系统会自动生成 java 插件和 maven 仓库，所以如下两个配置项只有在手动增加新模块时需要配置
     apply plugin: 'java'
     sourceCompatibility = 11
+
     repositories {
         mavenCentral()
-        flatDir {
-            dirs '../libs'
-        }
     }
+
     dependencies {
         implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.34.0'
         implementation fileTree(dir: '../libs', includes: ['*.jar'])
